[package]
name = "godot-eqloader"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
libeq = { git = "https://github.com/cjab/libeq.git", branch = "master" }
image = { version="0.*", default-features = false, features=["bmp"]}
wav = {version="1.*"}
owning_ref = "0.*"